# clickwork

./: .gitignore  .markdownlint.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  docs-linkcheck.yml  docs.yml  lint.yml  publish.yml  release-smoke.yml  sign-release-tag.yml  test.yml  types.yml
benchmarks/: README.md  baseline.json
docs/: API_POLICY.md  ARCHITECTURE.md  GUIDE.md  LLM_REFERENCE.md  MIGRATING.md  PLUGINS.md  SECURITY.md  VERIFYING.md  index.md  llms.txt
docs/explanation/: api-policy.md  architecture.md  plugin-model.md
docs/how-to/: add-a-command.md  index.md  migrate-from-argparse.md  tame-a-script-directory.md  write-a-plugin.md
docs/plans/: 2026-04-15-rename-to-clickwork.md  2026-04-17-wave-1-unblockers.md  2026-04-17-wave-2-medium-features.md  2026-04-17-wave-3-runtime-features.md  2026-04-17-wave-4-docs.md
docs/reference/: api.md  guide.md  llm-reference.md  migrating.md  plugins.md  security.md  verifying.md
docs/superpowers/plans/: 2026-04-19-docs-site-implementation.md
docs/superpowers/specs/: 2026-04-17-clickwork-0.2.0-roadmap.md  2026-04-18-clickwork-1.0-roadmap.md  2026-04-19-conda-forge-recipe-plan.md  2026-04-19-docs-site-design.md  2026-04-19-sigstore-signing-plan.md  2026-04-19-sigstore-wave1-impl-plan.md  2026-04-20-sigstore-wave2-impl-plan.md  2026-04-20-sigstore-wave3-impl-plan.md  2026-04-20-sigstore-wave4-impl-plan.md
docs/tutorials/: quickstart.md
docs/tutorials/walkthrough/: 01-your-first-command.md  02-adding-a-plugin.md  03-packaging.md  index.md
scripts/: bench_coldstart.py
src/clickwork/: __init__.py  _deprecated.py  _logging.py  _types.py  cli.py  config.py  discovery.py  global_options.py  http.py  platform.py  prereqs.py  process.py  prompts.py  testing.py
src/qbrd_tools/: __init__.py  _logging.py  _types.py  cli.py  config.py  discovery.py  platform.py  prereqs.py  process.py  prompts.py
tests/: conftest.py
tests/fixtures/sample-plugin/: README.md  pyproject.toml
tests/fixtures/sample-plugin/src/sample_commands/: __init__.py  hello.py
tests/integration/: test_cli_e2e.py  test_sample_plugin.py
tests/unit/: test_cli.py  test_config.py  test_deprecated.py  test_discovery.py  test_global_options.py  test_http.py  test_logging.py  test_platform.py  test_prereqs.py  test_process.py  test_prompts.py  test_testing.py  test_types.py
