[project]
name = "clickwork"
version = "0.2.0"
description = "Reusable CLI framework for project automation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "qubitrenegade", email = "qubitrenegade@gmail.com"},
]
keywords = ["cli", "click", "plugin", "framework", "command-line"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2",
]

[project.urls]
Homepage = "https://github.com/qubitrenegade/clickwork"
Repository = "https://github.com/qubitrenegade/clickwork"
Issues = "https://github.com/qubitrenegade/clickwork/issues"
Changelog = "https://github.com/qubitrenegade/clickwork/blob/main/CHANGELOG.md"
Documentation = "https://github.com/qubitrenegade/clickwork/blob/main/docs/GUIDE.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickwork"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
]
markers = [
    "network: requires network access (pip install, HTTP calls)",
]
