[project]
name = "clickwork"
version = "0.2.0"
description = "Reusable CLI framework for project automation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "qubitrenegade", email = "qubitrenegade@gmail.com"},
]
keywords = ["cli", "click", "plugin", "framework", "command-line"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2",
]

[project.urls]
Homepage = "https://github.com/qubitrenegade/clickwork"
Repository = "https://github.com/qubitrenegade/clickwork"
Issues = "https://github.com/qubitrenegade/clickwork/issues"
Changelog = "https://github.com/qubitrenegade/clickwork/blob/main/CHANGELOG.md"
Documentation = "https://github.com/qubitrenegade/clickwork/blob/main/docs/GUIDE.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickwork"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
]
markers = [
    "network: requires network access (pip install, HTTP calls)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Conservative initial rule selection. Expand in follow-up PRs once the
# project settles into a house style.
#   E, W  — pycodestyle errors + warnings
#   F     — pyflakes (undefined names, unused imports, etc.)
#   B     — flake8-bugbear (likely bugs)
#   I     — isort (import ordering)
#   UP    — pyupgrade (modern Python idioms)
select = ["E", "F", "W", "B", "I", "UP"]
ignore = []

[tool.ruff.format]
# Use ruff's defaults. Don't set quote-style / indent-style unless/until the
# project adopts an explicit house style.
