[project]
name = "sample-commands"
version = "0.1.0"
description = "Sample plugin for qbrd-tools -- test fixture and reference implementation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "qbrd-tools",
]

[project.entry-points."qbrd_tools.commands"]
hello = "sample_commands.hello:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_commands"]
